# ImageClassifierModel

./: .dockerignore  .gitignore  CLAUDE.md  README.md  README_操作指南.md  predictions.json  pyproject.toml
data/output/: test_images_predictions.csv  test_images_predictions.json  模型评估与导出总结.md
data/output/exported_models/20251226/screenshot_classifier.mlpackage/: Manifest.json
data/output/exported_models/20251227/model.mlpackage/: Manifest.json
data/output/metrics/: classification_report.txt  test_metrics.json
docker/: Dockerfile  export_tflite.sh
docs/: DEPLOYMENT_GUIDE.md  MODEL_API.md  README.md
scripts/: batch_inference.py  compare_models.py  evaluate.py  export.py  pipeline.py  train.py
src/config/: training_config.py
src/data/: dataloader.py  dataset.py  split_data.py  transforms.py
src/export/: coreml_exporter.py  onnx_exporter.py  tflite_exporter.py
src/models/: mobilenet_v2.py  model_factory.py
src/training/: early_stopping.py  metrics.py  trainer.py
src/utils/: device.py  logger.py  rich_console.py  visualization.py
tests/test_models/: test_model_creation.py
